Fix row gap again and don’t try to be fancy with refs

--- a/src/components/BowtieSpinner/BowtieSpinner.module.css
+++ b/src/components/BowtieSpinner/BowtieSpinner.module.css
@@ -6,7 +6,7 @@
 
 .row {
   display: flex;
-  margin-bottom: 68px;
+  margin-bottom: 67px;
   transform: translate(-32px, -32px);
 }
 
